my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/WREDUNDANTLEVEL/WREDUNDANTLEVEL.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\WREDUNDANTLEVEL.dml:7:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\WREDUNDANTLEVEL.dml:9:5: warning WREDUNDANTLEVEL: 'X then Y' log level has no effect when the levels are the same
